--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
   google_maps_flutter: ^2.12.1
+  flutter_chat_ui: ^1.6.15
+  uuid: ^4.5.1
+  flutter_chat_types: ^3.6.2
+  dio: ^5.8.0+1
+  flutter_polyline_points: ^2.1.0
+  google_maps: ^8.1.1
+
 
 dev_dependencies:
   flutter_test:
