--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   dio: ^5.8.0+1
   flutter_polyline_points: ^2.1.0
   google_maps: ^8.1.1
-
+  geolocator: ^14.0.0
+  http: ^1.3.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
